# sympy-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py  test_relativity.py  test_server.py  vars.py
.github/workflows/: docker.yml  publish.yml  test.yml
tests/: __init__.py  test_calculus.py  test_linalg.py  test_relativity.py  test_server.py  test_units.py
