[project]
name = "sympy-mcp"
version = "0.1.0"
description = "A MCP server for symbolic manipulation of mathematical expressions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
relativity = [
    "einsteinpy>=0.4.0",
]

[tool.uv]
default-groups = []

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"