[project]
name = "sympy-mcp"
version = "0.1.0"
description = "A MCP server for symbolic manipulation of mathematical expressions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "sympy>=1.14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "vars"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
relativity = [
    "einsteinpy>=0.4.0",
]

[tool.uv]
default-groups = []

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"